# carla-data-recorder

./: .env  .gitignore  AUTHORS  MANIFEST.in  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
benchmarking/: carla_gil_benchmark.py  carla_gil_benchmark.sh  cdr_benchmark.py  cdr_benchmark.sh  cdr_benchmark_cc.sh
benchmarking/cdr_benchmark_configs/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  four_cameras+lidar.json  four_cameras.json  no_sensors.json  six_cameras+lidar.json  two_cameras.json
cdr/: __init__.py  data_recorder.py
cdr/sensor_configs/: nuscenes.json  nuscenes_small.json
cdr/utils/: bounding_boxes.py  camera_utils.py  carla_classes.py  carla_transformations.py  carla_utils.py  environment_objects.py  json_utils.py  logging_utils.py  parquet.py  video.py
cdr/workers/: base.py  watchdog.py
cdr/workers/listeners/: __init__.py  abstract.py  sensors.py  world.py
cdr/workers/processors/: __init__.py  abstract.py  lidar.py  segmentations.py
cdr/workers/writers/: __init__.py  abstract.py  bounding_boxes.py  depth.py  gnss.py  imu.py  lidar.py  rgb.py  segmentations.py  trajectories.py
docker/: CARLA.Dockerfile  CDR.Dockerfile  README.md
docs/: dataset_format.md
examples/: 01_overtaking.xosc
patches/: CarlaUE4.sh  DefaultEngine.ini  scenario_runner.py
recorder_configs/: nuscenes-mono_formats.json  nuscenes.json  nuscenes_small.json
tests/: helpers.py  test_data_recorder.py
tests/mocks/: carla.py
tests/test_configs/: 1cam.json  1cam_1lidar.json  2cam_1lidar_1gnss_1imu.json  static_cam.json  static_gnss_imu.json  test_from_config.json  test_from_config_mono_formats.json  test_from_config_sensors_not_found.json
tests/utils/: test_bounding_boxes.py  test_camera_utils.py  test_carla_transformations.py  test_carla_utils.py
tools/: dataset_converter.py  recording_to_data.py  wait_for_carla.py
